# CommonLibSSE-NG-Sample-Plugin-Zen

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: version.rc.in
contrib/Distribution/PapyrusSources/: HitCounter.psc
contrib/Distribution/PapyrusTestSources/: CommonLibSSESampleTest.psc
include/Sample/: HitCounterManager.h
src/: Config.cpp  Config.h  HitCounterManager.cpp  Main.cpp  Papyrus.cpp  Papyrus.h
test/: HitCounterManager.cpp
